modified styles, index and scripts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
         <button type="submit" class="btn">Schedule your appointment!</button>
       </form>
 
-      <div class="output-add"></div>
+
+      <div id="confirmation">
+
+          <h3>Your appointment has been scheduled!<br></h3>
+          <p>
+          Name: <span class="name"></span><br>
+          Date of appointment: <span class="date"></span><br>
+          Starting time: <span class="start"></span><br>
+          Ending time: <span class="end"></span><br>
+        </p>
+      </div>
     </div>
   </body>
 </html>
